tests/paczka1/fuzzy1/67412728.err
Error in line 7: S432 S436 69,9
Error in line 1: kfVAX A232 90,9
Error in line 15: 3z7h S436 99,8
Error in line 19: S432 A232 31,0
Error in line 36: XjK S432 63,54
Error in line 35: XjK A232 81,5
